1) Re-introduce collapsible menus 2) Move RRDTool Default Font to Visual (most people using 1.3+) 3) Fix Placeholers, set on a few fields 4) Have Host Pinged as Callback when Editing Host 5) Fix User Menu Visibility Glitch 6) Fix issue where FTP Options would not appear under Settings Export 7) SNMP Options before Availability Options when editing host
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti/cacti/branches/0.8.8@7643 860744bd-22fc-0310-8c96-e9fe5004b5ca

--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -505,7 +505,7 @@ legend {
 }
 
 .textSubHeaderDark, .textSubHeaderDark:visited {
-	font-size: 10px;
+	font-size: 11px;
 	color: snow;
 	font-weight: bold;
 }
@@ -521,7 +521,9 @@ legend {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08', GradientType=0 );
 }
 
-.cactiTable {
+.cactiTable td {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .break {
@@ -654,7 +656,6 @@ legend {
 }
 
 .textEditTitle {
-	font-size: 10px;
 	font-weight: bold;
 }
 
